--- a/authentication.mdx
+++ b/authentication.mdx
@@ -5,7 +5,7 @@ description: "How to authenticate requests to the Worlds API"
 
 The Worlds API uses **Bearer Token** authentication. You must include your API key in the `Authorization` header of every request.
 
-## generating an API Key
+## Generating an API Key
 
 You can generate an API key in the [Worlds Console](https://console.wazoo.tech/settings).
 
