--- a/api-reference/sparql/update.mdx
+++ b/api-reference/sparql/update.mdx
@@ -29,4 +29,4 @@ INSERT DATA {
 
 ## Response
 
-The endpoint returns a 200 OK status on success.
+The endpoint returns a 204 No Content status on success.
