--- a/sdk/overview.mdx
+++ b/sdk/overview.mdx
@@ -18,21 +18,23 @@ npx jsr add @fartlabs/worlds
 Initialize the client with your API key.
 
 ```typescript
-import { World } from "@fartlabs/worlds";
+import { WorldsSdk } from "@fartlabs/worlds";
 
-// Initialize the client for a specific world.
-const world = new World({
+// Initialize the client
+const sdk = new WorldsSdk({
   baseUrl: "https://api.wazoo.tech/v1", // Adjust if using a different endpoint
   apiKey: "your-api-key",
-  worldId: "my-knowledge-base",
 });
 
 // Run a SPARQL query
-const result = await world.sparql(`
+const result = await sdk.worlds.sparql(
+  "my-knowledge-base",
+  `
   SELECT ?s ?p ?o WHERE {
     ?s ?p ?o .
   } LIMIT 10
-`);
+`
+);
 
 console.log(result);
 ```
